# coko

./: CLAUDE.md  RECOMMENDATIONS.md
.claude/: settings.local.json
backend/: .env.example  .gitignore  AFRICAN_FEATURES.md  Dockerfile  INSTALL-POSTGRESQL.md  Makefile  README-STABILITY.md  README.md  __init__.py  docker-compose.yml  init-databases.sql  inspect_db.py  manage.py  minimal_requirements.txt  populate_test_data.py  pytest.ini  requirements.txt  setup.cfg  setup_dependencies.py  start_african_dev.py  start_dev.py  test_billing_simple.py
backend/auth_service/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  utils.py  views.py
backend/auth_service/migrations/: 0001_initial.py  0002_securitylog.py
backend/catalog_service/: __init__.py  admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/catalog_service/migrations/: 0001_initial.py
backend/coko/: __init__.py  african_geolocation.py  african_languages.py  african_middleware.py  african_monitoring.py  african_payments.py  african_performance.py  african_pwa.py  african_urls.py  asgi.py  celery.py  db_router.py  dependency_injection.py  events.py  health_urls.py  health_views.py  interfaces.py  middleware.py  schema.py  service_adapters.py  services.py  settings.py  settings_dev.py  settings_local.py  urls.py  wsgi.py
backend/reading_service/: __init__.py  admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  utils.py  utils_refactored.py  views.py
backend/reading_service/migrations/: 0001_initial.py
backend/recommendation_service/: admin.py  apps.py  celery_config.py  models.py  permissions.py  serializers.py  service_adapters.py  signals.py  tasks.py  tests.py  urls.py  utils.py  utils_refactored.py  views.py
backend/recommendation_service/migrations/: 0001_initial.py
backend/scripts/: test_african_performance.py
backend/shared_models/: README_BILLING.md  __init__.py  admin_integration.py  api_client.py  apps.py  audit_trail.py  billing.py  billing_admin.py  billing_apis.py  billing_integration.py  billing_serializers.py  billing_services.py  billing_settings.py  billing_signals.py  billing_tasks.py  billing_templates.py  billing_urls.py  billing_webhooks.py  dashboard.py  dashboard_views.py  export_apis.py  financial_reports.py  mixins.py  models.py  services.py  tests.py  urls.py
backend/shared_models/migrations/: 0001_initial.py  0002_invoice_paymenttransaction_invoiceitem_and_more.py  (+1 more)
backend/tests/: test_service_refactoring.py
(+161 files in other folders)
