[metadata]
name = coko-backend
version = 1.0.0
description = Backend Django pour la plateforme Coko
author = Équipe Coko
author_email = dev@coko.africa
url = https://github.com/coko/backend
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.11
install_requires =
    Django>=4.2,<5.0
    djangorestframework>=3.14
    psycopg2-binary>=2.9

[flake8]
max-line-length = 88
exclude = 
    .git,
    __pycache__,
    .venv,
    venv,
    env,
    migrations,
    settings,
    node_modules,
    staticfiles,
    media
ignore = 
    E203,  # whitespace before ':'
    E501,  # line too long (handled by black)
    W503,  # line break before binary operator
    F401,  # imported but unused (handled by isort)
per-file-ignores =
    __init__.py:F401
    settings.py:E501
    */migrations/*:E501,F401

[isort]
profile = black
line_length = 88
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
skip = migrations
known_django = django
known_first_party = coko,auth_service,catalog_service,reading_service,recommendation_service
sections = FUTURE,STDLIB,THIRDPARTY,DJANGO,FIRSTPARTY,LOCALFOLDER

[mypy]
python_version = 3.11
check_untyped_defs = True
ignore_missing_imports = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
strict_optional = True
show_error_codes = True
namespace_packages = True
explicit_package_bases = True

[mypy-*.migrations.*]
ignore_errors = True

[mypy-*.tests.*]
ignore_errors = True

[coverage:run]
source = .
omit = 
    */migrations/*
    */venv/*
    */env/*
    manage.py
    */settings/*
    */tests/*
    */test_*
    */__pycache__/*
    */staticfiles/*
    */media/*
    */node_modules/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    class .*\(Protocol\):
    @(abc\.)?abstractmethod

[coverage:html]
directory = htmlcov